tests/ascribe-02/out.txt
error: undefined value: x
  ┌─ err.sml:5:16
  │
5 │ val _: int = S.x
  │                ^

typechecking failed
